infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mogbank
  labels:
    app.kubernetes.io/part-of: mogbank
    app.kubernetes.io/managed-by: terraform
